lib/dmp40/TLDFM.h

ViStatus _VI_FUNC TLDFM_enabled_hysteresis_compensation (ViSession    instrumentHandle,
                                                         TLDFM_Target target,
                                                         ViBoolean*   pEnabled);
ViStatus _VI_FUNC TLDFM_enable_hysteresis_compensation  (ViSession    instrumentHandle,
                                                         TLDFM_Target target,
                                                         ViBoolean    enable);
//******************************************************************************

ViStatus _VI_FUNC TLDFM_get_measured_segment_voltage (ViSession instrumentHandle,
													  ViUInt32  segmentIndex,
													  ViReal64* pSegmentVoltage);
ViStatus _VI_FUNC TLDFM_get_measured_segment_voltages (ViSession instrumentHandle,
													   ViReal64  segmentVoltages[]);
ViStatus _VI_FUNC TLDFM_get_measured_tilt_voltage (ViSession instrumentHandle,
												   ViUInt32  tiltIndex,
												   ViReal64* pTiltVoltage);
ViStatus _VI_FUNC TLDFM_get_measured_tilt_voltages (ViSession instrumentHandle,
													ViReal64  tiltVoltages[]);
ViStatus _VI_FUNC TLDFM_get_measured_voltages (ViSession instrumentHandle,
											   ViReal64  segmentVoltages[],
											   ViReal64  tiltVoltages[]);
ViStatus _VI_FUNC TLDFM_get_feedback_voltage          (ViSession instrumentHandle,
                                                       ViReal64* pFeedbackVoltage);
ViStatus _VI_FUNC TLDFM_get_feedback_current          (ViSession instrumentHandle,					  
                                                       ViReal64* pFeedbackCurrent);
ViStatus _VI_FUNC TLDFM_get_feedback                  (ViSession instrumentHandle,
                                                       ViReal64* pFeedbackVoltage,
                                                       ViReal64* pFeedbackCurrent);
ViStatus _VI_FUNC TLDFM_get_monitor_voltage           (ViSession instrumentHandle,
                                                       ViReal64* pMonitorVoltage);
ViStatus _VI_FUNC TLDFM_get_temperatures              (ViSession instrumentHandle,
                                                       ViReal64* pIC1Temperatur,
                                                       ViReal64* pIC2Temperatur,
                                                       ViReal64* pMirrorTemperatur,
                                                       ViReal64* pElectronicTemperatur);