src/dmp40j/bindings/TLDFM_64Library.java

	/**
	 * Original signature : <code>_VI_FUNC TLDFM_enabled_hysteresis_compensation(ViSession, ViUInt32, ViBoolean*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:205</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_enabled_hysteresis_compensation(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 target, Pointer<TLDFM_64Library.ViBoolean > pEnabled) {
		return Pointer.pointerToAddress(TLDFM_enabled_hysteresis_compensation(Pointer.getPeer(instrumentHandle), Pointer.getPeer(target), Pointer.getPeer(pEnabled)));
	}
	@Ptr 
	protected native static long TLDFM_enabled_hysteresis_compensation(@Ptr long instrumentHandle, @Ptr long target, @Ptr long pEnabled);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_enable_hysteresis_compensation(ViSession, ViUInt32, ViBoolean)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:209</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_enable_hysteresis_compensation(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 target, TLDFM_64Library.ViBoolean enable) {
		return Pointer.pointerToAddress(TLDFM_enable_hysteresis_compensation(Pointer.getPeer(instrumentHandle), Pointer.getPeer(target), Pointer.getPeer(enable)));
	}
	@Ptr 
	protected native static long TLDFM_enable_hysteresis_compensation(@Ptr long instrumentHandle, @Ptr long target, @Ptr long enable);
	/**
	 * ******************************************************************************<br>
	 * Original signature : <code>_VI_FUNC TLDFM_get_measured_segment_voltage(ViSession, ViUInt32, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:215</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_measured_segment_voltage(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 segmentIndex, Pointer<TLDFM_64Library.ViReal64 > pSegmentVoltage) {
		return Pointer.pointerToAddress(TLDFM_get_measured_segment_voltage(Pointer.getPeer(instrumentHandle), Pointer.getPeer(segmentIndex), Pointer.getPeer(pSegmentVoltage)));
	}
	@Ptr 
	protected native static long TLDFM_get_measured_segment_voltage(@Ptr long instrumentHandle, @Ptr long segmentIndex, @Ptr long pSegmentVoltage);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_measured_segment_voltages(ViSession, ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:219</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_measured_segment_voltages(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > segmentVoltages) {
		return Pointer.pointerToAddress(TLDFM_get_measured_segment_voltages(Pointer.getPeer(instrumentHandle), Pointer.getPeer(segmentVoltages)));
	}
	@Ptr 
	protected native static long TLDFM_get_measured_segment_voltages(@Ptr long instrumentHandle, @Ptr long segmentVoltages);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_measured_tilt_voltage(ViSession, ViUInt32, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:222</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_measured_tilt_voltage(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 tiltIndex, Pointer<TLDFM_64Library.ViReal64 > pTiltVoltage) {
		return Pointer.pointerToAddress(TLDFM_get_measured_tilt_voltage(Pointer.getPeer(instrumentHandle), Pointer.getPeer(tiltIndex), Pointer.getPeer(pTiltVoltage)));
	}
	@Ptr 
	protected native static long TLDFM_get_measured_tilt_voltage(@Ptr long instrumentHandle, @Ptr long tiltIndex, @Ptr long pTiltVoltage);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_measured_tilt_voltages(ViSession, ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:226</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_measured_tilt_voltages(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > tiltVoltages) {
		return Pointer.pointerToAddress(TLDFM_get_measured_tilt_voltages(Pointer.getPeer(instrumentHandle), Pointer.getPeer(tiltVoltages)));
	}
	@Ptr 
	protected native static long TLDFM_get_measured_tilt_voltages(@Ptr long instrumentHandle, @Ptr long tiltVoltages);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_measured_voltages(ViSession, ViReal64[], ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:229</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_measured_voltages(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > segmentVoltages, Pointer<TLDFM_64Library.ViReal64 > tiltVoltages) {
		return Pointer.pointerToAddress(TLDFM_get_measured_voltages(Pointer.getPeer(instrumentHandle), Pointer.getPeer(segmentVoltages), Pointer.getPeer(tiltVoltages)));
	}
	@Ptr 
	protected native static long TLDFM_get_measured_voltages(@Ptr long instrumentHandle, @Ptr long segmentVoltages, @Ptr long tiltVoltages);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_feedback_voltage(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:233</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_feedback_voltage(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > pFeedbackVoltage) {
		return Pointer.pointerToAddress(TLDFM_get_feedback_voltage(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pFeedbackVoltage)));
	}
	@Ptr 
	protected native static long TLDFM_get_feedback_voltage(@Ptr long instrumentHandle, @Ptr long pFeedbackVoltage);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_feedback_current(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:236</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_feedback_current(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > pFeedbackCurrent) {
		return Pointer.pointerToAddress(TLDFM_get_feedback_current(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pFeedbackCurrent)));
	}
	@Ptr 
	protected native static long TLDFM_get_feedback_current(@Ptr long instrumentHandle, @Ptr long pFeedbackCurrent);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_feedback(ViSession, ViReal64*, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:239</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_feedback(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > pFeedbackVoltage, Pointer<TLDFM_64Library.ViReal64 > pFeedbackCurrent) {
		return Pointer.pointerToAddress(TLDFM_get_feedback(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pFeedbackVoltage), Pointer.getPeer(pFeedbackCurrent)));
	}
	@Ptr 
	protected native static long TLDFM_get_feedback(@Ptr long instrumentHandle, @Ptr long pFeedbackVoltage, @Ptr long pFeedbackCurrent);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_monitor_voltage(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:243</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_monitor_voltage(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > pMonitorVoltage) {
		return Pointer.pointerToAddress(TLDFM_get_monitor_voltage(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pMonitorVoltage)));
	}
	@Ptr 
	protected native static long TLDFM_get_monitor_voltage(@Ptr long instrumentHandle, @Ptr long pMonitorVoltage);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_temperatures(ViSession, ViReal64*, ViReal64*, ViReal64*, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:246</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_temperatures(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > pIC1Temperatur, Pointer<TLDFM_64Library.ViReal64 > pIC2Temperatur, Pointer<TLDFM_64Library.ViReal64 > pMirrorTemperatur, Pointer<TLDFM_64Library.ViReal64 > pElectronicTemperatur) {
		return Pointer.pointerToAddress(TLDFM_get_temperatures(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pIC1Temperatur), Pointer.getPeer(pIC2Temperatur), Pointer.getPeer(pMirrorTemperatur), Pointer.getPeer(pElectronicTemperatur)));
	}
	@Ptr 
	protected native static long TLDFM_get_temperatures(@Ptr long instrumentHandle, @Ptr long pIC1Temperatur, @Ptr long pIC2Temperatur, @Ptr long pMirrorTemperatur, @Ptr long pElectronicTemperatur);
	/** Undefined type */
	public static interface StatusUpdate {
		
	};
	/** Undefined type */
	public static interface ViChar {
		
	};
	/** Undefined type */
	public static interface ViSession {
		
	};
	/** Undefined type */
	public static interface ViReal64 {
		
	};
	/** Undefined type */
	public static interface ViStatus {
		
	};
	/** Undefined type */
	public static interface _VI_FUNC {
		
	};
	/** Undefined type */
	public static interface ViInt32 {
		
	};
	/** Undefined type */
	public static interface ViBoolean {
		
	};
	/** Undefined type */
	public static interface ViString {
		
	};
	/** Undefined type */
	public static interface ViRsrc {
		
	};
	/** Undefined type */
	public static interface ViUInt32 {
		
	};
	/** Undefined type */
	public static interface ViInt16 {
		
	};
}
